Display login in config / user
Just so the user can see its login

--- a/src/Wallabag/CoreBundle/Resources/translations/messages.de.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.de.yml
@@ -102,6 +102,7 @@ config:
         feed_limit: 'Anzahl der Einträge pro Feed'
     form_user:
         # two_factor_description: "Enabling two factor authentication means you'll receive an email with a code OR need to use an OTP app (like Google Authenticator, Authy or FreeOTP) to get a one time code on every new untrusted connection. You can't choose both option."
+        # login_label: 'Login'
         name_label: 'Name'
         email_label: 'E-Mail-Adresse'
         two_factor:
