--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fa.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fa.yml
@@ -102,7 +102,7 @@ config:
         feed_limit: 'محدودیت آر-اس-اس'
     form_user:
         # two_factor_description: "Enabling two factor authentication means you'll receive an email with a code OR need to use an OTP app (like Google Authenticator, Authy or FreeOTP) to get a one time code on every new untrusted connection. You can't choose both option."
-        # login_label: 'Login'
+        # login_label: 'Login (can not be changed)'
         name_label: 'نام'
         email_label: 'نشانی ایمیل'
         two_factor:
