--- a/src/Wallabag/CoreBundle/Resources/translations/messages.it.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.it.yml
@@ -59,6 +59,7 @@ config:
         user_info: 'Informazioni utente'
         password: 'Password'
         rules: 'Regole di etichettatura'
+        # ignore_origin: 'Ignore origin rules'
         new_user: 'Aggiungi utente'
         reset: 'Area di reset'
     form:
@@ -617,6 +618,8 @@ flashes:
             # otp_disabled: Two-factor authentication disabled
             # tagging_rules_imported: Tagging rules imported
             # tagging_rules_not_imported: Error while importing tagging rules
+            # ignore_origin_rules_deleted: 'Ignore origin rule deleted'
+            # ignore_origin_rules_updated: 'Ignore origin rule updated'
     entry:
         notice:
             entry_already_saved: 'Contenuto già salvato in data %date%'
