--- a/src/Wallabag/CoreBundle/Resources/translations/messages.ru.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.ru.yml
@@ -68,12 +68,8 @@ config:
         items_per_page_label: 'Записей на странице'
         language_label: 'Язык'
         reading_speed:
-            label: 'Скорость чтения'
+            label: 'Скорость чтения (слов в минуту)'
             help_message: 'Вы можете использовать онлайн-инструменты для оценки скорости чтения:'
-            100_word: 'Я читаю ~100 слов в минуту'
-            200_word: 'Я читаю ~200 слов в минуту'
-            300_word: 'Я читаю ~300 слов в минуту'
-            400_word: 'Я читаю ~400 слов в минуту'
         action_mark_as_read:
             label: 'Куда Вы хотите быть перенаправлены, после пометки записи, как прочитанная?'
             redirect_homepage: 'На домашнюю страницу'
