--- a/src/Wallabag/CoreBundle/Resources/translations/messages.th.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.th.yml
@@ -68,12 +68,8 @@ config:
         items_per_page_label: 'ไอเทมต่อหน้า'
         language_label: 'ภาษา'
         reading_speed:
-            label: 'การอ่านแบบด่วน'
+            label: 'การอ่านแบบด่วน (คำต่อนาที)'
             help_message: 'คุณสามารถใช้เครื่องมือออนไลน์เพื่อประเมินการอ่านแบบด่วน:'
-            100_word: 'ฉันอ่าน ~100 คำต่อนาที'
-            200_word: 'ฉันอ่าน ~200 คำต่อนาท'
-            300_word: 'ฉันอ่าน ~300 คำต่อนาท'
-            400_word: 'ฉันอ่าน ~400 คำต่อนาท'
         action_mark_as_read:
             label: 'คุณต้องการเปลี่ยนทิศทางหลังจากระบุเครื่องหมายรายการอ่านที่ไหน?'
             redirect_homepage: 'ไปยังโฮมเพจ'
