--- a/src/Wallabag/CoreBundle/Resources/translations/messages.oc.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.oc.yml
@@ -518,6 +518,7 @@ developer:
             redirect_uris_label: 'URLs de redireccion'
             save_label: 'Crear un novèl client'
         action_back: 'Retorn'
+        # copy_to_clipboard: Copy to clipboard
     client_parameter:
         page_title: 'Gestion dels clients API > Los paramètres de vòstre client'
         page_description: 'Vaquí los paramètres de vòstre client.'
