--- a/src/Wallabag/CoreBundle/Resources/translations/messages.pt.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.pt.yml
@@ -518,7 +518,7 @@ developer:
             redirect_uris_label: 'URIs de redirecionamento'
             save_label: 'Criar um novo cliente'
         action_back: 'Voltar'
-        # copy_to_clipboard: Copy to clipboard
+        # copy_to_clipboard: Copy
     client_parameter:
         # page_title: 'API clients management > Parâmetros de clientes'
         page_description: 'Aqui estão os parâmetros de seus clientes.'
